--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,6 +8,13 @@ on:
   schedule:
     - cron: "0 6 * * 1" # Weekly on Monday 6am UTC
 
+concurrency:
+  group: security-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -15,10 +22,12 @@ jobs:
   audit:
     name: Security Audit
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-audit
         run: cargo install --locked cargo-audit --version 0.22.1
@@ -29,6 +38,7 @@ jobs:
   deny:
     name: License & Supply Chain
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
 
