feat: enhance hardware peripheral support and documentation
- Added `Peripheral` trait implementation in `src/peripherals/` to manage hardware boards (STM32, RPi GPIO).
- Updated `AGENTS.md` to include new extension points for peripherals and their configuration.
- Introduced comprehensive documentation for adding boards and tools, including a quick start guide and supported boards.
- Enhanced `Cargo.toml` to include optional dependencies for PDF extraction and peripheral support.
- Created new datasheets for Arduino Uno, ESP32, and Nucleo-F401RE, detailing pin aliases and GPIO usage.
- Implemented new tools for hardware memory reading and board information retrieval in the agent loop.

This update significantly improves the integration and usability of hardware peripherals within the ZeroClaw framework.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,9 @@ tokio-serial = { version = "5", default-features = false, optional = true }
 # probe-rs for STM32/Nucleo memory read (Phase B)
 probe-rs = { version = "0.24", optional = true }
 
+# PDF extraction for datasheet RAG (optional, enable with --features rag-pdf)
+pdf-extract = { version = "0.10", optional = true }
+
 # Raspberry Pi GPIO (Linux/RPi only) — target-specific to avoid compile failure on macOS
 [target.'cfg(target_os = "linux")'.dependencies]
 rppal = { version = "0.14", optional = true }
@@ -107,6 +110,8 @@ hardware = ["nusb", "tokio-serial"]
 peripheral-rpi = ["rppal"]
 # probe = probe-rs for Nucleo memory read (adds ~50 deps; optional)
 probe = ["dep:probe-rs"]
+# rag-pdf = PDF ingestion for datasheet RAG
+rag-pdf = ["dep:pdf-extract"]
 
 [profile.release]
 opt-level = "z"      # Optimize for size
